--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      #- db_data:/var/lib/postgresql/data
+      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d:z
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
